# Replica-Dataset

./: .gitignore  CMakeLists.txt  build.sh  download.sh
ReplicaSDK/: CMakeLists.txt
ReplicaSDK/include/: PTexLib.h
ReplicaSDK/src/: viewer.cpp
